src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedBundleClassType1/InvalidUnexpectedBundleClassType1.php
<?php

namespace Invalid\UnexpectedBundleClassType1;

/*
 * The class doesn't extend ClarolinePlugin
 */
class InvalidUnexpectedBundleClassType1
{

}